# suzerain

./: .gitattributes  .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  PROGRESS.md  README  astylerc  bootstrap  configure.ac  doxygen.cfg  doxygen.cfg.in  foo.sh  log4cxx.properties  revisionstr.am
apps/: .gitignore  Common.am  Makefile.am  application_base.cpp  application_base.hpp  channel.cpp  channel.hpp  channel_common.cpp  channel_common.hpp  channel_ex.cpp  channel_explicit.cpp  channel_explicit_svnrev.c  channel_init.cpp  channel_main.cpp  channel_main_svnrev.c  channel_mean.cpp  channel_mean.py  channel_treatment.hpp  conservation.cpp  driver.cpp  driver.hpp  driver_base.cpp  driver_base.hpp  driver_pencil.cpp  driver_pencil_grid.cpp  driver_pencil_grid_svnrev.c  driver_sine.cpp  driver_suzerain_p3dfft.cpp  driver_suzerain_p3dfft_svnrev.c  driver_underling.cpp  explicit_n.cpp  explicit_n.hpp  explicit_op.cpp  explicit_op.hpp  hybrid_op.cpp  hybrid_op.hpp  logger.cpp  logger.hpp  logging.cpp  logging.hpp  (+26 more)
build-aux/: .gitattributes  .gitignore  Makefile.am  config.guess  ltmain.sh  svnrev.c  svnrev.h  tex-it  version-gen
doc/: Makefile.am  derivation.bib  derivation.tex  skewadjoint.bib  skewadjoint.tex  timestepping.tex  timestepping_ex.tex  timestepping_imex.tex
fields/: Makefile.am  channel_k07.h5  channel_k08.h5  channel_k09.h5  coleman3k01.00.h5  coleman3k05.00.h5  coleman3k15.00.h5  coleman3k30.00.h5  coleman5k01.00.h5  coleman5k05.00.h5  coleman5k15.00.h5  coleman5k30.00.h5  laminar_k05.h5  laminar_k06.h5  laminar_k07.h5  laminar_k08.h5  laminar_k09.h5  legacy_r22804.h5  legacy_r38808.h5  spatiotemporal_1e-1_k06.h5  spatiotemporal_1e-2_k06.h5  spatiotemporal_consistent_1e-1_cevisslam2.602_k08.h5  spatiotemporal_consistent_1e-1_cevisslam4.134_k08.h5  spatiotemporal_consistent_1e-1_k06.h5  spatiotemporal_consistent_1e-1_pexi-1e-2_k06.h5  spatiotemporal_consistent_1e-2_k06.h5  spatiotemporal_consistent_5e-2_pexi-1e-2_k06.h5  temporal_1e-1_k08.h5  temporal_1e-2_k08.h5  temporal_1e-3_k08.h5  temporal_consistent_1e-1_k08.h5  temporal_consistent_1e-2_k08.h5
jobscripts/: .gitignore  Makefile.am  bl.perfect.in  channel.perfect.in  channel.reacting.in  laminar.perfect.in  laminar.reacting.in  mms_case.perfect.in  mms_case.reacting.in  qlast  qsub.lonestar.in  qsub.tacc.in  sbatch.llnl.in  sbatch.stampede.in  sbatch.tacc.in  test_bash_syntax.sh
largo/: AUTHORS  LICENSE.in  Makefile.am  NEWS  README  bootstrap  configure.ac  largo.pc.in  sfmakedepend.am
lib/: .gitignore  Makefile.am  p3dfft_d.h  p3dfft_s.h  svnrev.c  svnrev.h
postproc/: .gitignore  Makefile.am  channel.m  datatimes.sh  frame.sh  gb.py  gb2ge.m  orderest  perfect.decl  perfect.py  perfect_decl.py  perfect_decl.raw  plan_suzerain.py  plot_blparam.py  plot_perfect.py  plot_stats.py  plot_status.py  prerequisites.py  propagation.py  reacting_summary.py  relam.bl  relaminarize.bl  remove_hdf5.py  rename_hdf5.py  rescheck.py  select_files.py  sgr2suz.py  sniff.bl  spectra.py  stationary.bl  summary_surf.py  turbulence.bl
src/: Makefile.am  Pencil.h  PencilGrid.h  burgers.cc  burgers.h  driver_sine.c  driver_sine.cc  helloworld.cc  legendrePoly.cc  legendrePoly.h  legendrePoly_test.cc  log4cxx.properties  p3dfft_cxx.h  p3dfft_d.h  p3dfft_s.h  pencil.h  pencil.hpp  pencil_grid.h  pencil_grid.hpp  quesoFunctions.cc  quesoFunctions.h  residual.cc  residual.h  residual_test.cc  solver.cc  solver.h  solver_test.cc  test_Pencil.cc  test_PencilGrid.cc  test_complex.cc  test_example.cc  test_gsl_bspline.cc  test_pencil.cc  test_pencil_grid.cc  timeQuesoSolve.cc  tools.cc  tools.h  utility.h
suzerain/: .gitignore  Makefile.am  RngStream.cpp  RngStream.hpp  allocator.hpp  ar.hpp  arsel.cpp  arsel.hpp  baseflow.cpp  baseflow.hpp  bl.c  bl.cpp  bl.h  bl.hpp  blas_et_al.c  blas_et_al.h  blas_et_al.hpp  blasius.c  blasius.h  boost_multi_array_hack.hpp  bsmbsm.c  bsmbsm.h  bsmbsm_aPxpby_complex.def  bsmbsm_aPxpby_real.def  bsmbsm_complex.def  bsmbsm_pack.def  bsmbsm_real.def  bsmbsm_solver.cpp  bsmbsm_solver.hpp  bspline.c  bspline.h  bspline.hpp  bspline_definition.hpp  bspline_eval.c  bspline_eval.h  bspline_operator.c  bspline_operator.h  bspline_operators.hpp  bsplineop.c  bsplineop.h  (+246 more)
tests/: .gitignore  Makefile.am  StlAllocatorTestContainer.hpp  StlAllocatorTestMain.hpp  StlAllocatorTestMembers.hpp  StlAllocatorTestOutput.hpp  StlAllocatorTestPolicy.hpp  StlAllocatorTestTypes.hpp  log4cxx.properties  test_RngStream.cpp  test_allocator.cpp  test_bl.cpp  test_blas.c  test_blas_et_al.c  test_blas_et_al_cpp.cpp  test_blasext.c  test_blasius.c  test_bsmbsm.cpp  test_bspline.c  test_bspline.cpp  test_bspline_deriv.cpp  test_bspline_eval.cpp  test_bspline_operator.cpp  test_bsplineop.cpp  test_classical.cpp  test_coalescing_pool.cpp  test_complex.cpp  test_constraint_treatment.cpp  test_diffwave.cpp  test_diffwave_mpi.cpp  test_diffwave_p3dfft.cpp  test_diffwave_p3dfft.sh  test_empty.cpp  test_error.cpp  test_exprparse.cpp  test_fftw.cpp  test_fftw_1D.cpp  test_fftw_1d.cpp  test_fftw_multi_array.cpp  test_fftw_multi_array_1D.cpp  (+77 more)
underling/: .gitignore  AUTHORS  INSTALL  LICENSE.in  Makefile.am  NEWS  README  configure.ac  license.am  sfmakedepend.am  underling-fftw-openmp.pc.in  underling-fftw-pthreads.pc.in  underling-fftw.pc.in  underling.pc.in
writeup/: .gitignore  L2.tex  Makefile.am  channel_treatment.tex  derivation.bib  derivation.tex  references.bib  smr91.tex  timestepping.tex
writeups/: .gitignore  Euler_Eigensystem_3D.nb  L2.tex  Makefile.am  acoustic_decision_pt.tex  acoustic_linearization.tex  astrommurray1011.eps  baseflow.tex  baseflow_schematic.eps  bsmbsm.tex  cev_summary_fpg.eps  cevisslam_summary1.eps  cevisslam_summary2.eps  cevisslam_summary_fpg.eps  channel_treatment.tex  covariance.tex  derivation.tex  filter.tex  full_linear_operator.tex  helm.dot  inhomogeneity.eps  inhomogeneity1.eps  inhomogeneity2.eps  lssdimex.tex  nozzle_schematic.eps  nozzle_subsonic.eps  nozzle_supersonic.eps  perfectgas.tex  plate_treatment.tex  radialflow.tex  reacting_linearization.tex  reacting_main.tex  (+9 more)
(+586 files in other folders)
